<resources>
    <string name="app_name">Popular Movies</string>

    <string name="movie_poster">Movie Poster</string>

    <!-- Label for the sorting preference -->
    <string name="pref_sort_label">Sort By</string>

    <!-- Key for storing sorting order in sharedPreferences -->
    <string name="pref_sort_key" translatable="false">sortBy</string>

    <!-- Label for sort by popularity option in sort by preferences -->
    <string name="pref_sort_label_popular">Popularity</string>

    <!-- Label for sort by rating option in sort by preferences -->
    <string name="pref_sort_label_rated">User Rating</string>

    <!-- Label for favorite movies -->
    <string name="pref_sort_label_favorite">Favorites</string>

    <!-- Value in SharedPreferences for sort by popularity option -->
    <string name="pref_sort_popular" translatable="false">popular</string>

    <!-- Value in SharedPreferences for sort by rating option -->
    <string name="pref_sort_rated" translatable="false">top_rated</string>

    <!-- Value in SharedPreferences for sort by rating option -->
    <string name="pref_sort_favorite" translatable="false">favorite</string>

    <!-- String in API to sort by popularity -->
    <string name="pref_sort_popular_api" translatable="false">popular</string>

    <!-- String in API to sort by user rating -->
    <string name="pref_sort_rated_api" translatable="false">top_rated</string>

    <!-- String for sort by label -->
    <string name="action_settings">Sort By</string>

    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_movie_detail">Movie Detail</string>

    <string name="title_placeholder">Title</string>

    <string name="release_date_placeholder">Releasing on</string>

    <string name="rating_placeholder">Rating</string>

    <string name="favourite">Favorite</string>

    <string name="overview_header">Overview</string>

    <string name="overview_placeholder">Overview Text</string>

    <string name="trailer_header">Trailer</string>

    <string name="review_header">Review</string>

    <string name="action_movie_detail_settings">Settings</string>

    <string name="author_name">Author Name</string>

</resources>
